// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApiService getChains gets mainnet chains 1`] = `
[
  {
    "id": "Ethereum",
    "isMainnet": true,
    "name": "Ethereum",
  },
  {
    "id": "Polkadot",
    "isMainnet": true,
    "name": "Polkadot",
  },
  {
    "id": "Bitcoin",
    "isMainnet": true,
    "name": "Bitcoin",
  },
]
`;

exports[`ApiService getChains gets testnet chains (perseverance) 1`] = `
[
  {
    "id": "Ethereum",
    "isMainnet": false,
    "name": "Ethereum",
  },
  {
    "id": "Polkadot",
    "isMainnet": false,
    "name": "Polkadot",
  },
  {
    "id": "Bitcoin",
    "isMainnet": false,
    "name": "Bitcoin",
  },
]
`;

exports[`ApiService getChains gets testnet chains (sisyphos) 1`] = `
[
  {
    "id": "Ethereum",
    "isMainnet": false,
    "name": "Ethereum",
  },
  {
    "id": "Polkadot",
    "isMainnet": false,
    "name": "Polkadot",
  },
  {
    "id": "Bitcoin",
    "isMainnet": false,
    "name": "Bitcoin",
  },
]
`;

exports[`ApiService getRoute gets a route with a quote 1`] = `
{
  "destAddress": "",
  "destChain": "Ethereum",
  "destTokenSymbol": "ETH",
  "quote": {
    "egressAmount": "2",
    "id": "string",
    "intermediateAmount": "1",
  },
  "srcChain": "Bitcoin",
  "srcTokenSymbol": "BTC",
}
`;

exports[`ApiService getRoute gets a route with a quote 2`] = `
[
  "https://swapperoo.org/quote?amount=10000&srcAsset=BTC&destAsset=ETH",
  {
    "signal": undefined,
  },
]
`;

exports[`ApiService getTokens (mainnet) gets the correct tokens for testnets (Bitcoin) 1`] = `
[
  {
    "chain": "Bitcoin",
    "contractAddress": "0xbitcoin",
    "decimals": 8,
    "isMainnet": true,
    "name": "bitcoin",
    "symbol": "BTC",
  },
]
`;

exports[`ApiService getTokens (mainnet) gets the correct tokens for testnets (Ethereum) 1`] = `
[
  {
    "chain": "Ethereum",
    "contractAddress": "0xeth",
    "decimals": 18,
    "isMainnet": true,
    "name": "ether",
    "symbol": "ETH",
  },
  {
    "chain": "Ethereum",
    "contractAddress": "0xusdc",
    "decimals": 6,
    "isMainnet": true,
    "name": "usdc",
    "symbol": "USDC",
  },
  {
    "chain": "Ethereum",
    "contractAddress": "0xflip",
    "decimals": 18,
    "isMainnet": true,
    "name": "flip",
    "symbol": "FLIP",
  },
]
`;

exports[`ApiService getTokens (mainnet) gets the correct tokens for testnets (Polkadot) 1`] = `
[
  {
    "chain": "Polkadot",
    "contractAddress": "0xdot",
    "decimals": 10,
    "isMainnet": true,
    "name": "dot",
    "symbol": "DOT",
  },
]
`;

exports[`ApiService getTokens (perseverance) gets the correct tokens for testnets (Bitcoin) 1`] = `
[
  {
    "chain": "Bitcoin",
    "contractAddress": "0xbitcoin",
    "decimals": 8,
    "isMainnet": false,
    "name": "bitcoin",
    "symbol": "BTC",
  },
]
`;

exports[`ApiService getTokens (perseverance) gets the correct tokens for testnets (Ethereum) 1`] = `
[
  {
    "chain": "Ethereum",
    "contractAddress": "0xeth",
    "decimals": 18,
    "isMainnet": false,
    "name": "ether",
    "symbol": "ETH",
  },
  {
    "chain": "Ethereum",
    "contractAddress": "0xusdc",
    "decimals": 6,
    "isMainnet": false,
    "name": "usdc",
    "symbol": "USDC",
  },
  {
    "chain": "Ethereum",
    "contractAddress": "0xflip",
    "decimals": 18,
    "isMainnet": false,
    "name": "flip",
    "symbol": "FLIP",
  },
]
`;

exports[`ApiService getTokens (perseverance) gets the correct tokens for testnets (Polkadot) 1`] = `
[
  {
    "chain": "Polkadot",
    "contractAddress": "0xdot",
    "decimals": 10,
    "isMainnet": false,
    "name": "dot",
    "symbol": "DOT",
  },
]
`;

exports[`ApiService getTokens (sisyphos) gets the correct tokens for testnets (Bitcoin) 1`] = `
[
  {
    "chain": "Bitcoin",
    "contractAddress": "0xbitcoin",
    "decimals": 8,
    "isMainnet": false,
    "name": "bitcoin",
    "symbol": "BTC",
  },
]
`;

exports[`ApiService getTokens (sisyphos) gets the correct tokens for testnets (Ethereum) 1`] = `
[
  {
    "chain": "Ethereum",
    "contractAddress": "0xeth",
    "decimals": 18,
    "isMainnet": false,
    "name": "ether",
    "symbol": "ETH",
  },
  {
    "chain": "Ethereum",
    "contractAddress": "0xusdc",
    "decimals": 6,
    "isMainnet": false,
    "name": "usdc",
    "symbol": "USDC",
  },
  {
    "chain": "Ethereum",
    "contractAddress": "0xflip",
    "decimals": 18,
    "isMainnet": false,
    "name": "flip",
    "symbol": "FLIP",
  },
]
`;

exports[`ApiService getTokens (sisyphos) gets the correct tokens for testnets (Polkadot) 1`] = `
[
  {
    "chain": "Polkadot",
    "contractAddress": "0xdot",
    "decimals": 10,
    "isMainnet": false,
    "name": "dot",
    "symbol": "DOT",
  },
]
`;

exports[`ApiService getTokens gets the correct tokens for mainnets (Bitcoin) 1`] = `
[
  {
    "chain": "Bitcoin",
    "contractAddress": "0xbitcoin",
    "decimals": 8,
    "isMainnet": true,
    "name": "bitcoin",
    "symbol": "BTC",
  },
]
`;

exports[`ApiService getTokens gets the correct tokens for mainnets (Ethereum) 1`] = `
[
  {
    "chain": "Ethereum",
    "contractAddress": "0xeth",
    "decimals": 18,
    "isMainnet": true,
    "name": "ether",
    "symbol": "ETH",
  },
  {
    "chain": "Ethereum",
    "contractAddress": "0xusdc",
    "decimals": 6,
    "isMainnet": true,
    "name": "usdc",
    "symbol": "USDC",
  },
  {
    "chain": "Ethereum",
    "contractAddress": "0xflip",
    "decimals": 18,
    "isMainnet": true,
    "name": "flip",
    "symbol": "FLIP",
  },
]
`;

exports[`ApiService getTokens gets the correct tokens for mainnets (Polkadot) 1`] = `
[
  {
    "chain": "Polkadot",
    "contractAddress": "0xdot",
    "decimals": 10,
    "isMainnet": true,
    "name": "dot",
    "symbol": "DOT",
  },
]
`;
